welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:8: error: ';' expected but 'def' found.
}def max(x:Int, y:Int): Int = {
 ^