welcome.lessons.welcome.methods.args.MethodsArgs.scala.code

def max(x:Double, y:Double): Double = {
  if (x > y) {
    return x;
  }
  return y;
}def max(x:Int, y:Int): Int = {
  if (x > y) {
    return x;
  }
  return y;
}
def max(x:Int, y:Int, z:Int): Int = {
  if (x > y && x > z) {
    return x;
  }
  if (y > z) {
    return y;
  }
  return z;
}